--- a/templates/home/prueba.html.twig
+++ b/templates/home/prueba.html.twig
@@ -23,7 +23,7 @@
                 <th scope="col">Nombre Alimento</th>
                 <th scope="col">Cantidad</th>
                 <th scope="col">Calorías</th>
-                <th scope="col">Hora</th> <!-- Cambiado el encabezado de la columna -->
+                <th scope="col">Hora</th>
             </tr>
         </thead>
         <tbody>
