--- a/templates/registro_peso/peso.html.twig
+++ b/templates/registro_peso/peso.html.twig
@@ -32,9 +32,9 @@
                     borderColor: 'rgb(21, 77, 0)', // Color de la línea
                     borderWidth: 1,
                     fill: {
-                        target: 'origin', // Rellena desde la parte inferior
-                        above: 'rgba(75, 192, 192, 0.2)', // Color de relleno arriba de la línea (verde)
-                        below: 'rgba(0, 128, 0, 0.2)' // Color de relleno abajo de la línea (verde)
+                        target: 'origin',
+                        above: 'rgba(255, 0, 0, 0.2)', // Cambiar los valores de rojo (255) y alfa (0.2) según sea necesario
+                        below: 'rgba(255, 0, 0, 0.2)' // Cambiar los valores de rojo (255) y alfa (0.2) según sea necesario
                     }
                 }]
             },
