--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Your Website{% endblock %}</title>
-    <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+    <link rel="stylesheet" href="/public/css/styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome CSS -->
@@ -43,12 +43,11 @@
             </div>
         </div>
     </nav>
-    
 
-   <main style="margin-top: 30px; margin-bottom: 100px;">
-        {% block content %}
-        {% endblock %}
-    </main>
+    <main style="margin-top: 30px; margin-bottom: 500px;">
+        </main>
+    
+    
 
     <!-- Footer -->
     <footer class="text-white py-4 mt-auto">
